ISSUE-13: openapi: movieName -> movieTitle
